--- a/Predicting Income from Census Data.ipynb
+++ b/Predicting Income from Census Data.ipynb
@@ -170,19 +170,11 @@
     }
    ],
    "source": [
-    "# Total number of records\n",
     "n_records = data.shape[0]\n",
-    "\n",
-    "# Number of records where individual's income is more than $50,000\n",
     "n_greater_50k = data[data.income == '>50K'].shape[0]\n",
-    "\n",
-    "# Number of records where individual's income is at most $50,000\n",
     "n_at_most_50k = data[data.income == '<=50K'].shape[0]\n",
-    "\n",
-    "# Percentage of individuals whose income is more than $50,000\n",
     "greater_percent = n_greater_50k * 100.0 / n_records\n",
     "\n",
-    "# Print the results\n",
     "print(\"Total number of records: {}\".format(n_records))\n",
     "print(\"Individuals making more than $50,000: {}\".format(n_greater_50k))\n",
     "print(\"Individuals making at most $50,000: {}\".format(n_at_most_50k))\n",
@@ -296,11 +288,9 @@
     }
    ],
    "source": [
-    "# Split the data into features and target label\n",
     "income_raw = data['income']\n",
     "features_raw = data.drop('income', axis=1)\n",
     "\n",
-    "# Visualize skewed continuous features of original data\n",
     "vs.distribution(features_raw)"
    ]
   },
@@ -333,13 +323,11 @@
     }
    ],
    "source": [
-    "# Log-transform the skewed features\n",
     "skewed = ['capital-gain', 'capital-loss']\n",
     "features_log_transformed = pd.DataFrame(data=features_raw)\n",
     "features_log_transformed[skewed] = features_raw[skewed].apply(\n",
     "    lambda x: np.log(x + 1))\n",
     "\n",
-    "# Visualize the new log distributions\n",
     "vs.distribution(features_log_transformed, transformed=True)"
    ]
   },
@@ -510,7 +498,6 @@
     }
    ],
    "source": [
-    "# Initialize a scaler, then apply it to the features\n",
     "scaler = MinMaxScaler()  # default=(0, 1)\n",
     "numerical = [\n",
     "    'age', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week'\n",
@@ -520,7 +507,6 @@
     "features_log_minmax_transform[numerical] = scaler.fit_transform(\n",
     "    features_log_transformed[numerical])\n",
     "\n",
-    "# Show an example of a record with scaling applied\n",
     "display(features_log_minmax_transform.head())"
    ]
   },
@@ -563,18 +549,12 @@
     }
    ],
    "source": [
-    "# TODO: One-hot encode the 'features_log_minmax_transform' data using pandas.get_dummies()\n",
     "features_final = pd.get_dummies(features_raw)\n",
     "\n",
-    "# TODO: Encode the 'income_raw' data to numerical values\n",
     "income = income_raw.apply(lambda x: int(x == '>50K'))\n",
     "\n",
-    "# Print the number of features after one-hot encoding\n",
     "encoded = list(features_final.columns)\n",
-    "print(\"{} total features after one-hot encoding.\".format(len(encoded)))\n",
-    "\n",
-    "# Uncomment the following line to see the encoded feature names\n",
-    "#print(encoded)"
+    "print(\"{} total features after one-hot encoding.\".format(len(encoded)))"
    ]
   },
   {
@@ -605,13 +585,11 @@
     }
    ],
    "source": [
-    "# Split the 'features' and 'income' data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(features_final, \n",
     "                                                    income, \n",
     "                                                    test_size = 0.2, \n",
     "                                                    random_state = 0)\n",
     "\n",
-    "# Show the results of the split\n",
     "print(\"Training set has {} samples.\".format(X_train.shape[0]))\n",
     "print(\"Testing set has {} samples.\".format(X_test.shape[0]))"
    ]
@@ -677,7 +655,6 @@
     }
    ],
    "source": [
-    "# Calculate accuracy, precision and recall\n",
     "true_positives = sum(y_train.append(y_test))\n",
     "true_negatives = 0\n",
     "false_positives = y_train.append(y_test).value_counts()[0]\n",
@@ -687,8 +664,6 @@
     "precision = true_positives / (true_positives + false_positives)\n",
     "recall = true_positives / (true_positives + false_negatives)\n",
     "\n",
-    "# Calculate F-score using the formula above for beta = 0.5 and correct values\n",
-    "#for precision and recall.\n",
     "beta = 0.5\n",
     "fscore = (1 + beta**2) * (precision * recall) / (\n",
     "    (beta**2 * precision) + recall)\n",
@@ -796,45 +771,29 @@
     "\n",
     "    results = {}\n",
     "\n",
-    "    # Fit the learner to the training data using slicing with\n",
-    "    #'sample_size' using .fit(training_features[:], training_labels[:])\n",
-    "    start = time()  # Get start time\n",
+    "    start = time()\n",
     "    learner = learner.fit(X_train[:sample_size], y_train[:sample_size])\n",
-    "    end = time()  # Get end time\n",
-    "\n",
-    "    # Calculate the training time\n",
+    "    end = time()\n",
     "    results['train_time'] = end - start\n",
     "\n",
-    "    # TODO: Get the predictions on the test set(X_test),\n",
-    "    #       then get predictions on the first 300 training samples(X_train)\n",
-    "    #       using .predict()\n",
-    "    start = time()  # Get start time\n",
+    "    start = time()\n",
     "    predictions_test = learner.predict(X_test)\n",
     "    predictions_train = learner.predict(X_train[:300])\n",
-    "    end = time()  # Get end time\n",
-    "\n",
-    "    # Calculate the total prediction time\n",
+    "    end = time()\n",
     "    results['pred_time'] = end - start\n",
     "\n",
-    "    # Compute accuracy on the first 300 training samples which is y_train[:300]\n",
     "    results['acc_train'] = accuracy_score(y_train[:300],\n",
     "                                          predictions_train[:300])\n",
     "\n",
-    "    # Compute accuracy on test set using accuracy_score()\n",
     "    results['acc_test'] = accuracy_score(y_test, predictions_test)\n",
     "\n",
-    "    # Compute F-score on the the first 300 training samples using fbeta_score()\n",
     "    results['f_train'] = fbeta_score(\n",
     "        y_train[:300], predictions_train[:300], beta=0.5)\n",
     "\n",
-    "    # Compute F-score on the test set which is y_test\n",
     "    results['f_test'] = fbeta_score(y_test, predictions_test, beta=0.5)\n",
     "\n",
-    "    # Success\n",
     "    print(\"{} trained on {} samples.\".format(learner.__class__.__name__,\n",
     "                                             sample_size))\n",
-    "\n",
-    "    # Return the results\n",
     "    return results"
    ]
   },
@@ -881,21 +840,14 @@
     }
    ],
    "source": [
-    "# Initialize the three models\n",
-    "\n",
     "clf_A = LogisticRegression(random_state=42)\n",
     "clf_B = LinearSVC(random_state=42)\n",
     "clf_C = GradientBoostingClassifier(random_state=42)\n",
     "\n",
-    "# Calculate the number of samples for 1%, 10%, and 100% of the training data\n",
-    "# HINT: samples_100 is the entire training set i.e. len(y_train)\n",
-    "# HINT: samples_10 is 10% of samples_100\n",
-    "# HINT: samples_1 is 1% of samples_100\n",
     "samples_100 = len(y_train)\n",
     "samples_10 = int(samples_100/10)\n",
     "samples_1 = int(samples_100/100)\n",
     "\n",
-    "# Collect results on the learners\n",
     "results = {}\n",
     "for clf in [clf_A, clf_B, clf_C]:\n",
     "    clf_name = clf.__class__.__name__\n",
@@ -903,8 +855,6 @@
     "    for i, samples in enumerate([samples_1, samples_10, samples_100]):\n",
     "        results[clf_name][i] = \\\n",
     "        train_predict(clf, samples, X_train, y_train, X_test, y_test)\n",
-    "\n",
-    "# Run metrics visualization for the three supervised learning models chosen\n",
     "\n",
     "vs.evaluate(results, accuracy, fscore)"
    ]
@@ -959,31 +909,20 @@
     }
    ],
    "source": [
-    "# Initialize the classifier\n",
     "clf = GradientBoostingClassifier(random_state=42)\n",
     "\n",
-    "# Create the parameters list.\n",
     "parameters = [{'learning_rate': [0.05, 0.1, 0.15]},\n",
     "              {'n_estimators' : [250, 500, 750]}\n",
     "              ]\n",
     "\n",
-    "# Make an fbeta_score scoring object using make_scorer()\n",
     "scorer = make_scorer(fbeta_score, beta=0.5)\n",
-    "\n",
-    "# Perform grid search on the classifier using 'scorer' as the scoring method using GridSearchCV()\n",
     "grid_obj = GridSearchCV(clf, parameters, scoring=scorer , n_jobs=-1)\n",
-    "\n",
-    "# Fit the grid search object to the training data and find the optimal parameters using fit()\n",
     "grid_fit = grid_obj.fit(X_train, y_train)\n",
-    "\n",
-    "# Get the estimator\n",
     "best_clf = grid_fit.best_estimator_\n",
     "\n",
-    "# Make predictions using the unoptimized and model\n",
     "predictions = (clf.fit(X_train, y_train)).predict(X_test)\n",
     "best_predictions = best_clf.predict(X_test)\n",
     "\n",
-    "# Report the before-and-afterscores\n",
     "print(\"Unoptimized model\\n------\")\n",
     "print(\"Accuracy score on testing data: {:.4f}\".format(accuracy_score(y_test, predictions)))\n",
     "print(\"F-score on testing data: {:.4f}\".format(fbeta_score(y_test, predictions, beta = 0.5)))\n",
@@ -1155,10 +1094,8 @@
     }
    ],
    "source": [
-    "# Extract the feature importances using .feature_importances_ \n",
     "importances = best_clf.feature_importances_\n",
     "\n",
-    "# Plot the top 5 features\n",
     "vs.feature_plot(importances, X_train, y_train)"
    ]
   },
@@ -1192,19 +1129,15 @@
     }
    ],
    "source": [
-    "# Reduce the feature space\n",
     "X_train_reduced = X_train[X_train.columns.values[(np.argsort(importances)[::-1]\n",
     "                                                  )[:5]]]\n",
     "X_test_reduced = X_test[X_test.columns.values[(np.argsort(importances)[::-1]\n",
     "                                               )[:5]]]\n",
     "\n",
-    "# Train on the \"best\" model found from grid search earlier\n",
     "clf = (clone(best_clf)).fit(X_train_reduced, y_train)\n",
     "\n",
-    "# Make new predictions\n",
     "reduced_predictions = clf.predict(X_test_reduced)\n",
     "\n",
-    "# Report scores from the final model using both versions of data\n",
     "print(\"Final Model trained on full data\\n------\")\n",
     "print(\"Accuracy on testing data: {:.4f}\".format(\n",
     "    accuracy_score(y_test, best_predictions)))\n",
@@ -1243,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
